testdata/e2e/examples/negative-testing/resource/resources.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: good
data:
  foo: bar
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: bad
data:
  foo: true
