testdata/e2e/examples/negative-testing/resource/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: negative-resource
spec:
  steps:
  - try:
    - apply:
        file: resources.yaml
        expect:
        - match:
            apiVersion: v1
            kind: ConfigMap
            metadata:
              name: bad
          check:
            ($error != null): true
